--- a/css_intro/index.html
+++ b/css_intro/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello</h1>
+    <h4>Hello everyone css is a nightmare</h4>
 </body>
 </html>
