--- a/css_intro/assignments/css_basics/index.html
+++ b/css_intro/assignments/css_basics/index.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Lorem ipsum dolor sit amete, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </footer>
 
 </body>
