--- a/css_intro/inclass/week4/images&gifs/index.html
+++ b/css_intro/inclass/week4/images&gifs/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>images and Gifs</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello</h1>
-    <h4>Hello everyone css is a nightmare</h4>
+    <img src="images/cad&aub.png" alt="image">
 </body>
 </html>
