ferret party new

--- a/css_intro/assignments/geocities/index.html
+++ b/css_intro/assignments/geocities/index.html
@@ -10,7 +10,7 @@
     <h1>It's a Ferret Party!</h1>
     <h2>Come party with us!</h2>
 
-    <p>Fun fact ferrets love to party. Ferrets party 23 hours out of the day. Do you like to party? You dont party as much as ferrets. Here at ferret party the fun never ends and the dancing never stops. Dance with the ferrets! Do it now!!!</p>
+    <p>Fun fact ferrets love to party. Ferrets party 23 hours out of the day. Do you like to party? You dont party as much as ferrets. Here at ferret party the fun never ends and the dancing never stops. Dance with the ferrets! Do it now!!!!</p>
 
     <img class="ferret1" src="gifs/gif1.gif" alt="image">
     <img class="rugferret" src="gifs/gif2.gif" alt="image">
