--- a/css_intro/assignments/geocities/index.html
+++ b/css_intro/assignments/geocities/index.html
@@ -7,25 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>It's a Ferret Party!</h1>
-    <h2>Come party with us!</h2>
 
-    <p>Fun fact ferrets love to party. Ferrets party 23 hours out of the day. Do you like to party? You dont party as much as ferrets. Here at ferret party the fun never ends and the dancing never stops. Dance with the ferrets! Do it now!!!!</p>
+    <header>
+        <h1>It's a Ferret Party!</h1>
+        <h2>Come party with us!</h2>
+    </header>
 
-    <img class="ferret1" src="gifs/gif1.gif" alt="image">
-    <img class="rugferret" src="gifs/gif2.gif" alt="image">
-    <img class="ferret2" src="gifs/gif3.gif" alt="image">
-    <img class="ferret3" src="gifs/gif4.gif" alt="image">
-    <img class="heartferret" src="gifs/gif5.gif" alt="image">
-    <img class="ferret4" src="gifs/ferret7.gif" alt="image">
+    <main>
+        <p>Fun fact ferrets love to party. Ferrets party 23 hours out of the day. Do you like to party? You dont party as much as ferrets. Here at ferret party the fun never ends and the dancing never stops. Dance with the ferrets! Do it now!!!!</p>
 
+        <section>
+            <img class="ferret1" src="gifs/gif1.gif" alt="image">
+            <img class="rugferret" src="gifs/gif2.gif" alt="image">
+            <img class="ferret2" src="gifs/gif3.gif" alt="image">
+            <img class="ferret3" src="gifs/gif4.gif" alt="image">
+            <img class="heartferret" src="gifs/gif5.gif" alt="image">
+            <img class="ferret4" src="gifs/ferret7.gif" alt="image">
+        </section>
+
+        <section>
+            <img class="heart1" src="imgs/heart1.png" alt="image">
+            <img class="heart2" src="imgs/heart2.png" alt="image">
+            <img class="heart3" src="imgs/heart3.png" alt="image">
+        </section>
+
+    </main>
     
-    <img class="heart1" src="imgs/heart1.png" alt="image">
-    <img class="heart2" src="imgs/heart2.png" alt="image">
-    <img class="heart3" src="imgs/heart3.png" alt="image">
-
-    
-
-
 </body>
 </html>
