--- a/css_intro/assignments/portfolio/smartphone/index.html
+++ b/css_intro/assignments/portfolio/smartphone/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+   
     <nav>
-        <a href="../../../assignments/portfolio/">Home</a>
+        <a href="..">Home</a>
     </nav>
-    
+
     <main>
 
         <div class="wrapper">
