--- a/css_intro/assignments/portfolio/index.html
+++ b/css_intro/assignments/portfolio/index.html
@@ -19,7 +19,7 @@
             <a href="css_basics">CSS Basics</a>
             <a href="geocities">Geo Cities</a>
             <a href="smartphone">Smart Phone</a>
-            <a href="loading">Loading</a>
+            <a href="loading">Loading...</a>
     </main>
 </body>
 </html>
