--- a/css_intro/assignments/portfolio/index.html
+++ b/css_intro/assignments/portfolio/index.html
@@ -21,6 +21,8 @@
             <a href="smartphone">Smart Phone</a>
             <a href="loading">Loading...</a>
             <a href="grid-gallery/">Grid Gallery</a>
+            <a href="final">Final</a>
+        </nav>
     </main>
 </body>
 </html>
